[gd_scene load_steps=6 format=3 uid="uid://d2da0thyq5rq8"]

[ext_resource type="Script" path="res://src/interface_elements/enum_field.gd" id="1_vkd5r"]
[ext_resource type="Texture2D" uid="uid://coda6chhcatal" path="res://visual/icons/Down.svg" id="2_3cosj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fpguh"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.00784314, 0.00784314, 0.14902, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0588235, 0.117647, 0.301961, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5acu"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.0117647, 0.0117647, 0.2, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0745098, 0.156863, 0.4, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5n6p7"]
content_margin_left = 3.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.270588, 0.427451, 0.901961, 1)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.8, 1, 1)
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_detail = 16

[node name="EnumField" type="VBoxContainer"]
offset_bottom = 22.0
script = ExtResource("1_vkd5r")

[node name="MainLine" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme_override_constants/separation = 0

[node name="LineEdit" type="LineEdit" parent="MainLine"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
alignment = 1
editable = false
context_menu_enabled = false
select_all_on_focus = true
caret_blink = true

[node name="Button" type="Button" parent="MainLine"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fpguh")
theme_override_styles/hover = SubResource("StyleBoxFlat_r5acu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5n6p7")
icon = ExtResource("2_3cosj")

[node name="EnumPopup" type="Popup" parent="."]
transparent_bg = true
size = Vector2i(108, 132)

[node name="PanelContainer" type="PanelContainer" parent="EnumPopup"]
custom_minimum_size = Vector2(106, 0)
offset_right = 106.0
offset_bottom = 97.0

[node name="MarginContainer" type="MarginContainer" parent="EnumPopup/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="MainContainer" type="VBoxContainer" parent="EnumPopup/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MainLine/Button" to="." method="_on_button_pressed"]
